--- a/LoginWindow.xaml
+++ b/LoginWindow.xaml
@@ -22,8 +22,8 @@
                 </Rectangle.RenderTransform>
                 <Rectangle.Fill>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Orange" Offset="0"/>
-                        <GradientStop Color="#FF0BC50F" Offset="1"/>
+                        <GradientStop Color="Pink" Offset="0"/>
+                        <GradientStop Color="LightPink" Offset="1"/>
                     </LinearGradientBrush>
                 </Rectangle.Fill>
             </Rectangle>
