--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -22,7 +22,7 @@
         Title="Phần mềm quản lý trong trot" Height="800" Width="1400">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
-            <i:InvokeCommandAction 
+            <i:InvokeCommandAction Command="{Binding LoadedWindowCommand}" 
                                 CommandParameter="{Binding ElementName=mainWindow}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
