--- a/View/VungTrongView.xaml
+++ b/View/VungTrongView.xaml
@@ -50,34 +50,77 @@ WindowStartupLocation="CenterScreen"
                     </Grid.ColumnDefinitions>
 
                     <!-- Input Fields -->
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                        <TextBox Text="{Binding TenVungTrong}" 
-                             Margin="5" 
-                             VerticalAlignment="Center" 
-                             materialDesign:HintAssist.Hint="Tên vùng trồng" 
-                             Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                    <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" Margin="10">
+                        <!-- Mã vùng trồng -->
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5">
+                            <TextBox Text="{Binding MaVungTrong}" 
+                                Width="100" 
+                                materialDesign:HintAssist.Hint="Mã vùng trồng" 
+                                Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                            <materialDesign:PackIcon Kind="Plant" 
+                                VerticalAlignment="Center" 
+                                 Margin="-20,10,0,0" 
+                                 Foreground="Green" 
+                                 HorizontalAlignment="Right"/>
+
+                        </StackPanel>
+
+                        <!-- Tên vùng trồng -->
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5">
+                            <TextBox Text="{Binding TenVungTrong}" 
+                                Width="100" 
+                                materialDesign:HintAssist.Hint="Tên vùng trồng" 
+                                Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                            <materialDesign:PackIcon Kind="Flower" 
+                                    VerticalAlignment="Center" 
+                                    Margin="-10,10,0,0" 
+                                    Foreground="Orange" 
+                                    HorizontalAlignment="Right"/>
+
+                        </StackPanel>
+                        <!-- Mô tả -->
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5">
+                            <TextBox Text="{Binding MoTa}" 
+                            Width="50" 
+                            materialDesign:HintAssist.Hint="Mô tả" 
+                            Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                            <materialDesign:PackIcon Kind="Flower" 
+                            VerticalAlignment="Center" 
+                            Margin="-20,10,0,0" 
+                            Foreground="IndianRed" 
+                            HorizontalAlignment="Right"/>
+
+                        </StackPanel>
                     </StackPanel>
+
 
                     <!-- Buttons -->
                     <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button Command="{Binding SearchCommand}" 
+                        Content="Tìm kiếm" 
+                        Margin="5" 
+                         Width="100" 
+                         Background="MediumSeaGreen"  
+                         materialDesign:ButtonProgressAssist.IsIndeterminate="True" 
+                         materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"/>
                         <Button Command="{Binding AddCommand}" 
                             Content="Thêm" 
                             Margin="5" 
                             Width="100" 
-                            Background="MediumSeaGreen"  
+                            Background="DeepPink"  
                             materialDesign:ButtonProgressAssist.IsIndeterminate="True" 
                             materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"/>
                         <Button Command="{Binding EditCommand}" 
                             Content="Sửa" 
                             Margin="5" 
                             Width="100" 
-                            Background="MediumSeaGreen" 
+                            Background="DarkOrange" 
                             Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding DeleteCommand}" 
                             Content="Xóa" 
                             Margin="5"
                             Width="100" 
-                            Background="MediumSeaGreen"
+                            Background="DarkRed"
                             Style="{StaticResource MaterialDesignRaisedButton}"/>
                     </StackPanel>
                 </Grid>
@@ -151,7 +194,7 @@ WindowStartupLocation="CenterScreen"
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
                                             <Border Background="MediumSeaGreen" Padding="5" CornerRadius="10,10,0,0">
-                                                <TextBlock Text="Mã vùng trong" Foreground="White" FontWeight="Bold" TextAlignment="Center" Width="100"/>
+                                                <TextBlock Text="Mã vùng trồng" Foreground="White" FontWeight="Bold" TextAlignment="Center" Width="100"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
