--- a/View/CapDoHanhChinhView.xaml
+++ b/View/CapDoHanhChinhView.xaml
@@ -24,6 +24,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
+
         <Grid Grid.Row="0">
             <uc:ControllBarUC Tag="{Binding Title, ElementName=CDHCView}"></uc:ControllBarUC>
         </Grid>
@@ -49,7 +50,7 @@
 
                     <!-- Input Fields -->
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                        <TextBox Text="{Binding TenCapDo, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                        <TextBox Text="{Binding TenCapDo}" 
                              Margin="5" 
                              VerticalAlignment="Center" 
                              materialDesign:HintAssist.Hint="Tên cấp hành chính" 
@@ -92,7 +93,7 @@
             <materialDesign:Card Grid.Row="2" Margin="0,10,0,0" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ListView ItemsSource="{Binding CapDoList}" 
-                          SelectedItem="{Binding SelectedCapDo, Mode=TwoWay}" 
+                          SelectedItem="{Binding SelectedCapDo, Mode=OneWayToSource}" 
                           HorizontalAlignment="Stretch" 
                           VerticalAlignment="Stretch">
                         <ListView.View>
@@ -109,7 +110,7 @@
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5">
-                                                <TextBlock Text="{Binding ID}" TextAlignment="Center" Foreground="Black" Width="120"/>
+                                                <TextBlock Text="{Binding ID}" TextAlignment="Center" Foreground="Black" Width="200"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
@@ -127,7 +128,7 @@
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5">
-                                                <TextBlock Text="{Binding TenCapDo}" TextAlignment="Center" Foreground="Black" Width="150"/>
+                                                <TextBlock Text="{Binding TenCapDo}" TextAlignment="Center" Foreground="Black" Width="300"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
