--- a/View/CapDoHanhChinhView.xaml
+++ b/View/CapDoHanhChinhView.xaml
@@ -93,7 +93,7 @@
             <materialDesign:Card Grid.Row="2" Margin="0,10,0,0" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ListView ItemsSource="{Binding CapDoList}" 
-                          SelectedItem="{Binding SelectedCapDo, Mode=OneWayToSource}" 
+                          SelectedItem="{Binding SelectedCapDo, Mode=TwoWay}" 
                           HorizontalAlignment="Stretch" 
                           VerticalAlignment="Stretch">
                         <ListView.View>
